--- a/src/main/resources/fxml/license.fxml
+++ b/src/main/resources/fxml/license.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="767.0" prefWidth="921.0" style="-fx-background-color: #ECF0F1;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.codetreatise.controller.LicenseController">
+<AnchorPane prefHeight="767.0" prefWidth="921.0" style="-fx-background-color: #ECF0F1;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.licensemanager.controller.LicenseController">
    <children>
       <AnchorPane layoutX="15.0" layoutY="-22.0" prefHeight="410.0" prefWidth="894.0" style="-fx-background-color: #FFFFFF; -fx-border-radius: 30; -fx-background-radius: 30">
          <opaqueInsets>
