--- a/src/main/resources/fxml/form1.fxml
+++ b/src/main/resources/fxml/form1.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="744.0" prefWidth="652.0" style="-fx-border-color: #CBCAC7; -fx-border-radius: 5; -fx-background-color: #FFFFFF;" stylesheets="@../images/design.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.licensemanager.controller.DatasourceController">
+<AnchorPane prefHeight="744.0" prefWidth="652.0" style="-fx-border-color: #CBCAC7; -fx-border-radius: 5; -fx-background-color: #FFFFFF;" stylesheets="@../images/design.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.licensemanager.controller.DatasourceController">
    <children>
       <Label layoutX="14.0" layoutY="7.0" text="Datasource" textFill="MIDNIGHTBLUE">
          <font>
@@ -36,51 +36,51 @@
             <Line endX="-29.399993896484375" endY="-3.2000045776367188" layoutX="27.0" layoutY="8.0" startX="-24.399993896484375" startY="-3.2000045776367188" stroke="#fafafa" strokeWidth="2.0" />
          </children>
       </Group>
-      <TextField id="host" fx:id="datasourcenm" layoutX="26.0" layoutY="78.0" prefHeight="60.0" prefWidth="600.0" style="-fx-background-radius: 10;" />
+      <TextField id="host" fx:id="datasourcenm" layoutX="26.0" layoutY="78.0" prefHeight="47.0" prefWidth="600.0" style="-fx-background-radius: 10;" />
       <Line endX="84.0" layoutX="79.0" layoutY="78.0" startX="-33.000003814697266" stroke="#fff9f9" strokeWidth="2.0" />
       <Label layoutX="46.0" layoutY="67.0" prefHeight="20.0" prefWidth="126.0" text="Datasource Name" textFill="MIDNIGHTBLUE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <ComboBox fx:id="jdbcdriver" layoutX="26.0" layoutY="162.0" prefHeight="60.0" prefWidth="600.0" style="-fx-background-radius: 20; -fx-background-color: #FFFFFF; -fx-border-color: #BEBEBE; -fx-border-radius: 10;" />
-      <Line endX="46.80000305175781" layoutX="74.0" layoutY="162.0" startX="-28.300006866455078" stroke="#fff9f9" strokeWidth="2.0" />
-      <Label layoutX="44.0" layoutY="152.0" prefHeight="20.0" prefWidth="77.0" text="JDBCDriver" textFill="MIDNIGHTBLUE">
+      <ComboBox fx:id="jdbcdriver" layoutX="26.0" layoutY="147.0" prefHeight="47.0" prefWidth="600.0" style="-fx-background-radius: 20; -fx-background-color: #FFFFFF; -fx-border-color: #BEBEBE; -fx-border-radius: 10;" />
+      <Line endX="46.80000305175781" layoutX="74.0" layoutY="147.0" startX="-28.300006866455078" stroke="#fff9f9" strokeWidth="2.0" />
+      <Label layoutX="44.0" layoutY="137.0" prefHeight="20.0" prefWidth="77.0" text="JDBCDriver" textFill="MIDNIGHTBLUE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <TextField id="host" fx:id="host" layoutX="26.0" layoutY="246.0" prefHeight="60.0" prefWidth="600.0" style="-fx-background-radius: 10;" />
-      <Line endX="4.0" layoutX="71.0" layoutY="247.0" startX="-25.200000762939453" stroke="#fff9f9" strokeWidth="2.0" />
-      <Label layoutX="45.0" layoutY="237.0" prefHeight="20.0" prefWidth="36.0" text="Host" textFill="MIDNIGHTBLUE">
+      <TextField id="host" fx:id="host" layoutX="26.0" layoutY="216.0" prefHeight="47.0" prefWidth="600.0" style="-fx-background-radius: 10;" />
+      <Line endX="4.0" layoutX="71.0" layoutY="217.0" startX="-25.200000762939453" stroke="#fff9f9" strokeWidth="2.0" />
+      <Label layoutX="45.0" layoutY="207.0" prefHeight="20.0" prefWidth="36.0" text="Host" textFill="MIDNIGHTBLUE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <TextField id="port" fx:id="port" layoutX="26.0" layoutY="331.0" prefHeight="60.0" prefWidth="600.0" style="-fx-background-radius: 10;" />
-      <Line endX="1.0" layoutX="73.0" layoutY="332.0" startX="-25.200000762939453" stroke="#fff9f9" strokeWidth="2.0" />
-      <Label layoutX="46.0" layoutY="323.0" prefHeight="20.0" prefWidth="34.0" text="Port" textFill="MIDNIGHTBLUE">
+      <TextField id="port" fx:id="port" layoutX="26.0" layoutY="284.0" prefHeight="47.0" prefWidth="600.0" style="-fx-background-radius: 10;" />
+      <Line endX="1.0" layoutX="73.0" layoutY="285.0" startX="-25.200000762939453" stroke="#fff9f9" strokeWidth="2.0" />
+      <Label layoutX="46.0" layoutY="276.0" prefHeight="20.0" prefWidth="34.0" text="Port" textFill="MIDNIGHTBLUE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <TextField id="database" fx:id="databasenm" layoutX="26.0" layoutY="419.0" prefHeight="60.0" prefWidth="600.0" style="-fx-background-radius: 10;" />
-      <Line endX="-20.0" layoutX="124.0" layoutY="420.0" startX="-79.0" stroke="#fff9f9" strokeWidth="2.0" />
-      <Label layoutX="44.0" layoutY="409.0" prefHeight="20.0" prefWidth="66.0" text="Database" textFill="MIDNIGHTBLUE">
+      <TextField id="database" fx:id="databasenm" layoutX="26.0" layoutY="355.0" prefHeight="47.0" prefWidth="600.0" style="-fx-background-radius: 10;" />
+      <Line endX="-20.0" layoutX="124.0" layoutY="356.0" startX="-79.0" stroke="#fff9f9" strokeWidth="2.0" />
+      <Label layoutX="44.0" layoutY="344.0" prefHeight="20.0" prefWidth="66.0" text="Database" textFill="MIDNIGHTBLUE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <TextField id="username" fx:id="username" layoutX="26.0" layoutY="509.0" prefHeight="60.0" prefWidth="600.0" style="-fx-background-radius: 10;" />
-      <Line endX="-14.199996948242188" layoutX="126.0" layoutY="509.0" startX="-79.0" stroke="#fff9f9" strokeWidth="2.0" />
-      <Label layoutX="46.0" layoutY="499.0" prefHeight="20.0" prefWidth="73.0" text="Username" textFill="MIDNIGHTBLUE">
+      <TextField id="username" fx:id="username" layoutX="26.0" layoutY="434.0" prefHeight="47.0" prefWidth="600.0" style="-fx-background-radius: 10;" />
+      <Line endX="-14.199996948242188" layoutX="126.0" layoutY="434.0" startX="-79.0" stroke="#fff9f9" strokeWidth="2.0" />
+      <Label layoutX="46.0" layoutY="424.0" prefHeight="20.0" prefWidth="73.0" text="Username" textFill="MIDNIGHTBLUE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <PasswordField fx:id="password" layoutX="26.0" layoutY="593.0" prefHeight="60.0" prefWidth="600.0" style="-fx-background-radius: 10;" />
-      <Line endX="-17.800003051757812" layoutX="123.0" layoutY="594.0" startX="-79.0" stroke="#fff9f9" strokeWidth="2.0" />
-      <Label layoutX="43.0" layoutY="584.0" prefHeight="20.0" prefWidth="73.0" text="Password" textFill="MIDNIGHTBLUE">
+      <PasswordField fx:id="password" layoutX="26.0" layoutY="506.0" prefHeight="47.0" prefWidth="600.0" style="-fx-background-radius: 10;" />
+      <Line endX="-17.800003051757812" layoutX="123.0" layoutY="507.0" startX="-79.0" stroke="#fff9f9" strokeWidth="2.0" />
+      <Label layoutX="43.0" layoutY="497.0" prefHeight="20.0" prefWidth="73.0" text="Password" textFill="MIDNIGHTBLUE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
@@ -99,13 +99,21 @@
             <Font name="System Bold" size="12.0" />
          </font></Button>
       <Label fx:id="label" layoutX="29.0" layoutY="720.0" prefHeight="18.0" prefWidth="223.0" textFill="#3c860e" />
-      <Label fx:id="label1" layoutX="135.0" layoutY="138.0" prefHeight="18.0" prefWidth="190.0" textFill="#3c860e" />
+      <Label fx:id="label1" layoutX="135.0" layoutY="123.0" prefHeight="18.0" prefWidth="190.0" textFill="#3c860e" />
       <Text fill="MIDNIGHTBLUE" layoutX="565.0" layoutY="737.0" onMouseClicked="#backtoDashboard" strokeType="OUTSIDE" strokeWidth="0.0" text="&lt;-Back-">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
       </Text>
       <TextField fx:id="jdbcdrivertext" layoutX="604.0" layoutY="28.0" prefHeight="26.0" prefWidth="1.0" style="-fx-background-color: #FFFFFF;" />
+      <Line endX="-53.99999237060547" layoutX="122.0" layoutY="582.0" startX="-79.0" stroke="#fff9f9" strokeWidth="2.0" />
+      <TextField id="dataurl" fx:id="dataurl" layoutX="26.0" layoutY="579.0" prefHeight="47.0" prefWidth="600.0" style="-fx-background-radius: 10;" />
+      <Line endX="-55.99999237060547" layoutX="126.0" layoutY="579.0" startX="-79.0" stroke="#fff9f9" strokeWidth="2.0" />
+      <Label layoutX="46.0" layoutY="569.0" prefHeight="20.0" prefWidth="24.0" text="Url" textFill="MIDNIGHTBLUE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
    </children>
    <effect>
       <DropShadow />
