--- a/src/main/resources/fxml/form1.fxml
+++ b/src/main/resources/fxml/form1.fxml
@@ -43,44 +43,44 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <ComboBox fx:id="jdbcdriver" layoutX="26.0" layoutY="147.0" prefHeight="47.0" prefWidth="600.0" style="-fx-background-radius: 20; -fx-background-color: #FFFFFF; -fx-border-color: #BEBEBE; -fx-border-radius: 10;" />
-      <Line endX="46.80000305175781" layoutX="74.0" layoutY="147.0" startX="-28.300006866455078" stroke="#fff9f9" strokeWidth="2.0" />
-      <Label layoutX="44.0" layoutY="137.0" prefHeight="20.0" prefWidth="77.0" text="JDBCDriver" textFill="MIDNIGHTBLUE">
+      <ComboBox fx:id="jdbcdriver" layoutX="26.0" layoutY="351.0" prefHeight="47.0" prefWidth="600.0" style="-fx-background-radius: 20; -fx-background-color: #FFFFFF; -fx-border-color: #BEBEBE; -fx-border-radius: 10;" />
+      <Line endX="48.400001525878906" endY="3.0" layoutX="74.0" layoutY="348.0" startX="-31.599998474121094" startY="3.0" stroke="#fff9f9" strokeWidth="2.0" />
+      <Label layoutX="44.0" layoutY="339.0" prefHeight="20.0" prefWidth="77.0" text="JDBCDriver" textFill="MIDNIGHTBLUE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <TextField id="host" fx:id="host" layoutX="26.0" layoutY="216.0" prefHeight="47.0" prefWidth="600.0" style="-fx-background-radius: 10;" />
-      <Line endX="4.0" layoutX="71.0" layoutY="217.0" startX="-25.200000762939453" stroke="#fff9f9" strokeWidth="2.0" />
-      <Label layoutX="45.0" layoutY="207.0" prefHeight="20.0" prefWidth="36.0" text="Host" textFill="MIDNIGHTBLUE">
+      <TextField id="host" fx:id="host" layoutX="26.0" layoutY="148.0" prefHeight="47.0" prefWidth="600.0" style="-fx-background-radius: 10;" />
+      <Line endX="4.0" layoutX="71.0" layoutY="149.0" startX="-25.200000762939453" stroke="#fff9f9" strokeWidth="2.0" />
+      <Label layoutX="45.0" layoutY="139.0" prefHeight="20.0" prefWidth="36.0" text="Host" textFill="MIDNIGHTBLUE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <TextField id="port" fx:id="port" layoutX="26.0" layoutY="284.0" prefHeight="47.0" prefWidth="600.0" style="-fx-background-radius: 10;" />
-      <Line endX="1.0" layoutX="73.0" layoutY="285.0" startX="-25.200000762939453" stroke="#fff9f9" strokeWidth="2.0" />
-      <Label layoutX="46.0" layoutY="276.0" prefHeight="20.0" prefWidth="34.0" text="Port" textFill="MIDNIGHTBLUE">
+      <TextField id="port" fx:id="port" layoutX="26.0" layoutY="214.0" prefHeight="47.0" prefWidth="600.0" style="-fx-background-radius: 10;" />
+      <Line endX="1.0" layoutX="73.0" layoutY="215.0" startX="-25.200000762939453" stroke="#fff9f9" strokeWidth="2.0" />
+      <Label layoutX="46.0" layoutY="206.0" prefHeight="20.0" prefWidth="34.0" text="Port" textFill="MIDNIGHTBLUE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <TextField id="database" fx:id="databasenm" layoutX="26.0" layoutY="355.0" prefHeight="47.0" prefWidth="600.0" style="-fx-background-radius: 10;" />
-      <Line endX="-20.0" layoutX="124.0" layoutY="356.0" startX="-79.0" stroke="#fff9f9" strokeWidth="2.0" />
-      <Label layoutX="44.0" layoutY="344.0" prefHeight="20.0" prefWidth="66.0" text="Database" textFill="MIDNIGHTBLUE">
+      <TextField id="database" fx:id="databasenm" layoutX="26.0" layoutY="282.0" prefHeight="47.0" prefWidth="600.0" style="-fx-background-radius: 10;" />
+      <Line endX="-20.0" layoutX="124.0" layoutY="283.0" startX="-79.0" stroke="#fff9f9" strokeWidth="2.0" />
+      <Label layoutX="44.0" layoutY="271.0" prefHeight="20.0" prefWidth="66.0" text="Database" textFill="MIDNIGHTBLUE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <TextField id="username" fx:id="username" layoutX="26.0" layoutY="434.0" prefHeight="47.0" prefWidth="600.0" style="-fx-background-radius: 10;" />
-      <Line endX="-14.199996948242188" layoutX="126.0" layoutY="434.0" startX="-79.0" stroke="#fff9f9" strokeWidth="2.0" />
-      <Label layoutX="46.0" layoutY="424.0" prefHeight="20.0" prefWidth="73.0" text="Username" textFill="MIDNIGHTBLUE">
+      <TextField id="username" fx:id="username" layoutX="26.0" layoutY="425.0" prefHeight="47.0" prefWidth="600.0" style="-fx-background-radius: 10;" />
+      <Line endX="-14.199996948242188" layoutX="126.0" layoutY="425.0" startX="-79.0" stroke="#fff9f9" strokeWidth="2.0" />
+      <Label layoutX="46.0" layoutY="415.0" prefHeight="20.0" prefWidth="73.0" text="Username" textFill="MIDNIGHTBLUE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <PasswordField fx:id="password" layoutX="26.0" layoutY="506.0" prefHeight="47.0" prefWidth="600.0" style="-fx-background-radius: 10;" />
-      <Line endX="-17.800003051757812" layoutX="123.0" layoutY="507.0" startX="-79.0" stroke="#fff9f9" strokeWidth="2.0" />
-      <Label layoutX="43.0" layoutY="497.0" prefHeight="20.0" prefWidth="73.0" text="Password" textFill="MIDNIGHTBLUE">
+      <PasswordField fx:id="password" layoutX="26.0" layoutY="498.0" prefHeight="47.0" prefWidth="600.0" style="-fx-background-radius: 10;" />
+      <Line endX="-17.800003051757812" layoutX="123.0" layoutY="499.0" startX="-79.0" stroke="#fff9f9" strokeWidth="2.0" />
+      <Label layoutX="43.0" layoutY="489.0" prefHeight="20.0" prefWidth="73.0" text="Password" textFill="MIDNIGHTBLUE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
@@ -106,10 +106,10 @@
          </font>
       </Text>
       <TextField fx:id="jdbcdrivertext" layoutX="604.0" layoutY="28.0" prefHeight="26.0" prefWidth="1.0" style="-fx-background-color: #FFFFFF;" />
-      <Line endX="-53.99999237060547" layoutX="122.0" layoutY="582.0" startX="-79.0" stroke="#fff9f9" strokeWidth="2.0" />
-      <TextField id="dataurl" fx:id="dataurl" layoutX="26.0" layoutY="579.0" prefHeight="47.0" prefWidth="600.0" style="-fx-background-radius: 10;" />
-      <Line endX="-55.99999237060547" layoutX="126.0" layoutY="579.0" startX="-79.0" stroke="#fff9f9" strokeWidth="2.0" />
-      <Label layoutX="46.0" layoutY="569.0" prefHeight="20.0" prefWidth="24.0" text="Url" textFill="MIDNIGHTBLUE">
+      <Line endX="-53.99999237060547" layoutX="122.0" layoutY="574.0" startX="-79.0" stroke="#fff9f9" strokeWidth="2.0" />
+      <TextField id="dataurl" fx:id="dataurl" layoutX="26.0" layoutY="571.0" prefHeight="47.0" prefWidth="600.0" style="-fx-background-radius: 10;" />
+      <Line endX="-55.99999237060547" layoutX="126.0" layoutY="571.0" startX="-79.0" stroke="#fff9f9" strokeWidth="2.0" />
+      <Label layoutX="46.0" layoutY="561.0" prefHeight="20.0" prefWidth="24.0" text="Url" textFill="MIDNIGHTBLUE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
